--- a/Front/index.html
+++ b/Front/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="stylesheet" href="styles.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <script src="action.js"></script>
     </head>
     <body>
-        <h3>Ingrese el archivo</h3>
-        <div class="container">
-            <form action='' method="POST" name="f1" id="f1" class="form-horizontal" role="form" >
-                <input type="file" id="fileInput" name="file" />
-                <input
-                    type="submit"
-                    name="Submit"
-                    id="btn_id"
-                    value="submit!"
-                    onclick='SubmitVars(); this.disabled = true;'
-                >
-                <p id="answer">Answer </p>
-            </form>
+        <nav class="navbar navbar-inverse">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+            <p class="navbar-text">Some text</p>
+        </nav>
+        <div class="d-flex justify-content-center p-3">
+
+            <div class="container">
+                <h3>Ingrese el archivo</h3>
+                <form action='' method="POST" name="f1" id="f1" class="form-horizontal" role="form" >
+                    <input type="file" id="fileInput" name="file" />
+                    <input
+                        type="submit"
+                        name="Submit"
+                        id="btn_id"
+                        value="submit!"
+                        onclick='SubmitVars(); this.disabled = true;'
+                    >
+                    <p id="answer">Answer </p>
+                </form>
+            </div>
         </div>
     </body>
 </html>
