File reader - Java

--- a/Front/index.html
+++ b/Front/index.html
@@ -39,9 +39,19 @@
                         name="Submit"
                         id="btn_id_submitjava"
                         value="submit!"
-                        onclick='ReadJavaData(); this.disabled = true;'
+                        onclick='GreetUser(); this.disabled = true;'
                     >
                     <p id="answerJava">Answer </p>
+
+                    <input type="file" id="fileInputJava" name="file" />
+                    <input
+                        type="submit"
+                        name="Submit"
+                        id="btn_id_java"
+                        value="submit!"
+                        onclick='ReadJavaData(); this.disabled = true;'
+                    >
+                    <p id="answerJava2">Answer </p>
                 </form>
             </div>
         </div>
