--- a/Front/graphBased.html
+++ b/Front/graphBased.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="action.js"></script>
     <style>
         .btn-custom {
             background-color: #8ebbeb; 
@@ -65,17 +66,31 @@
                 <h3>Aproximación basada en grafos</h3>
                 <p>Cargue los archivos necesarios: barcodes.tsv.gz, features.tsv.gz y matrix.mtx.gz</p>
                 <div class="input-group mb-3">
-                    <input type="file" class="form-control" id="inputGroupFile01">
-                    <label class="input-group-text" for="inputGroupFile01">Barcodes</label>
+                    <input type="file" class="form-control" id="inputBarcodes">
+                    <label class="input-group-text" for="inputBarcodes">Barcodes</label>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="file" class="form-control" id="inputGroupFile02">
-                    <label class="input-group-text" for="inputGroupFile02">Features</label>
+                    <input type="file" class="form-control" id="inputGenes">
+                    <label class="input-group-text" for="inputGenes">Genes</label>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="file" class="form-control" id="inputGroupFile03">
-                    <label class="input-group-text" for="inputGroupFile03">Matrix</label>
-                </div>                                         
+                    <input type="file" class="form-control" id="inputMatrix">
+                    <label class="input-group-text" for="inputMatrix">Matrix</label>
+                </div>    
+                <input
+                        type="submit"
+                        name="Submit"
+                        id="cargar"
+                        value="Cargar datos"
+                        onclick='LeerArchivos(); this.disabled = true;'
+                    >  
+                <input
+                    type="submit"
+                    name="Submit"
+                    id="cargar"
+                    value="Correr modelo"
+                    onclick='CorrerModelo(); this.disabled = true;'
+                >                             
             </div>
             <div class="col-md-6">
                 <img src="/Users/melissa/Documents/Documents/Tesis/Desarrollo/sc-KMSTC/Front/images/graphbased.png" alt="Flowers in Chania" class="responsive-img">
