--- a/Front/loadData.html
+++ b/Front/loadData.html
@@ -25,13 +25,12 @@
     <div class="container-fluid btn-custom text-black" style="height: 50px;"></div>
 
     <div class="container mt-4">
-        <div class="row" id = "cargaDatos">
+        <div class="row">
             <div class="col-md-8">
-            <h1>Agrupamiento de datos de Single Cell</h1>
-            <h3>Seleccione los archivos</h3>
-            <p>Cargue los archivos necesarios: barcodes.tsv.gz, features.tsv.gz y matrix.mtx.gz</p>
-            </div>
-                <div class="col-md-8">
+                <h1>Agrupamiento de datos de Single Cell</h1>
+                <h3>Seleccione los archivos</h3>
+                <p>Cargue los archivos necesarios: barcodes.tsv.gz, features.tsv.gz y matrix.mtx.gz</p>
+
                 <div class="input-group mb-3">
                     <input type="file" class="form-control" id="inputBarcodes">
                     <label class="input-group-text" for="inputBarcodes">Barcodes</label>
@@ -42,7 +41,7 @@
                 </div>
                 <div class="input-group mb-3">
                     <input type="file" class="form-control" id="inputMatrix">
-                    <label class="input-group-text" for="inputMatrix ">Matrix</label>
+                    <label class="input-group-text" for="inputMatrix">Matrix</label>
                 </div>   
                 <div class="input-group mb-3">
                     <input
@@ -72,7 +71,10 @@
                         </div>
                     </div>
                 </div>
-                
+            </div>
+
+            <div class="col-md-4">
+                <img src="images/general.png" alt="general" class="img-fluid responsive-img">
             </div>
         </div>
     </div>
