--- a/Front/graphBasedAlgorithm.html
+++ b/Front/graphBasedAlgorithm.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="actualizar_outputs.js"></script>
     <script src="action.js"></script>
     <style>
         .btn-custom {
@@ -66,6 +67,19 @@
                 alt="tSNE Clusters">
             </div>
         </div>
+        <div class="row mt-4">
+            <div class="col-md-12 text-center">
+                <a href="/Users/melissa/Documents/Documents/Tesis/Desarrollo/sc-KMSTC/Back/upload_temp/results/clusters.csv" 
+                   class="btn btn-custom mb-4"
+                   id="descargarResultados"
+                   download="clusters.csv"
+                   style="visibility: hidden;">
+                   Descargar Resultados
+                </a>
+            </div>
+        </div>
+        
+        
     </div>
     </div>
 </body>
