--- a/Front/NaiveBayesAlgorithm.html
+++ b/Front/NaiveBayesAlgorithm.html
@@ -97,21 +97,39 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <img src="/Users/melissa/Documents/Documents/Tesis/Desarrollo/sc-KMSTC/Back/upload_temp/results/correlaciones_heatmap.png" 
-                id="ImagenCorrelaciones" 
+                <img src="/Users/melissa/Documents/Documents/Tesis/Desarrollo/sc-KMSTC/Back/upload_temp/results/nb_tissue_distribution.png" 
+                id="ImagenTissues" 
                 style="visibility: hidden;"
                 class="responsive-img" 
-                alt="Correlaciones Heatmap">
+                alt="Distribución de tejidos">
             </div>
             <div class="col-md-4">
-                <img src="/Users/melissa/Documents/Documents/Tesis/Desarrollo/sc-KMSTC/Back/upload_temp/results/cluster_distributions.png" 
-                id="ImagenDistribuciones" 
+                <img src="/Users/melissa/Documents/Documents/Tesis/Desarrollo/sc-KMSTC/Back/upload_temp/results/nb_type_distribution.png" 
+                id="ImagenTissuesTipos" 
                 style="visibility: hidden;"
                 class="responsive-img" 
-                alt="Cluster Distributions">
+                alt="Distribución de tipos celulares">
             </div>
             <div class="col-md-4">
                 <img src="/Users/melissa/Documents/Documents/Tesis/Desarrollo/sc-KMSTC/Back/upload_temp/results/tsne_clusters.png" 
-                id="tSNEClusters" 
+                id="tSNEClustersNB" 
                 style="visibility: hidden;"
                 class="responsive-img"
+                alt = "tSNE Clusters">
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-md-12 text-center">
+                <a href="/Users/melissa/Documents/Documents/Tesis/Desarrollo/sc-KMSTC/Back/upload_temp/results/nb_clusters.csv" 
+                   class="btn btn-custom mb-4"
+                   id="descargarResultadosNB"
+                   download="clusters.csv"
+                   style="visibility: hidden;">
+                   Descargar Resultados
+                </a>
+            </div>
+        </div>
+    </div>
+    </div>
+</body>
+</html>
